move portlet to controlPanel

--- a/GroovyScripts-web/src/main/resources/content/Language.properties
+++ b/GroovyScripts-web/src/main/resources/content/Language.properties
@@ -1,5 +1,6 @@
-javax.portlet.display-name.groovyscripts_web_GroovyscriptsWebmvcportlet=GroovyScripts-web JSP
-javax.portlet.keywords.groovyscripts_web_GroovyscriptsWebmvcportlet=groovyscripts.web,jsp
-javax.portlet.short-title.groovyscripts_web_GroovyscriptsWebmvcportlet=GroovyScripts-web JSP
-javax.portlet.title.groovyscripts_web_GroovyscriptsWebmvcportlet=GroovyScripts-web JSP Portlet
-groovyscripts_web_GroovyscriptsWebmvcportlet.caption=Hello from GroovyScripts-web JSP!
+category.custom.label=Category Custom Label
+javax.portlet.display-name.groovyscripts_web_GroovyscriptsWebpanelapp=GroovyScripts-web JSP
+javax.portlet.keywords.groovyscripts_web_GroovyscriptsWebpanelapp=groovyscripts.web,jsp
+javax.portlet.short-title.groovyscripts_web_GroovyscriptsWebpanelapp=GroovyScripts-web JSP
+javax.portlet.title.groovyscripts_web_GroovyscriptsWebpanelapp=GroovyScripts-web JSP Portlet
+groovyscripts_web_GroovyscriptsWebpanelapp.caption=Hello from GroovyScripts-web Panel App!
