add customSQL for retrieving a list with the max versions

--- a/GroovyScripts-service/src/main/resources/service.properties
+++ b/GroovyScripts-service/src/main/resources/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=GROOVY_SCRIPTS
-    build.number=5
-    build.date=1480284923599
+    build.namespace=GS
+    build.number=1
+    build.date=1481426072727
     build.auto.upgrade=true
